# Interaction-SAW-Models

./: CMakeLists.txt  ExactEnumeration.cpp  ExactEnumeration.cxx  Lattice.cpp  Makefile  Makefile.cuda  Model.cpp  Monte_Carlo.cpp  README.md  main.cpp  run_1_sbatch.sh  run_MC_forEE.sh  run_MC_forEE3D.sh  run_sbatch.sbatch
data/: ExactEnumeration.ipynb  README.md  TestMinumum.ipynb
data/EE/XY_Interaction/: XY_Interaction_EE_10.csv  XY_Interaction_EE_11.csv  XY_Interaction_EE_12.csv  XY_Interaction_EE_5.csv  XY_Interaction_EE_6.csv  XY_Interaction_EE_7.csv  XY_Interaction_EE_8.csv  XY_Interaction_EE_9.csv
data/EE/XY_Interaction_3D/: XY_Original_EE_4.csv  XY_Original_EE_5.csv  XY_Original_EE_6.csv  XY_Original_EE_7.csv
data/EE/XY_Original/: XY_Original_EE_5.csv  XY_Original_EE_6.csv  XY_Original_EE_7.csv  XY_Original_EE_8:.csv
data/EE/XY_OriginalRepeat/: XY_Original_EE_5.csv  XY_Original_EE_6.csv  XY_Original_EE_7.csv  XY_Original_EE_8.csv
data/XY_MC/For_EE/: 10_0.000000.out  10_0.250000.out  10_0.500000.out  10_0.750000.out  10_1.000000.out  10_1.250000.out  10_1.500000.out  11_0.000000.out  11_0.250000.out  11_0.500000.out  11_0.750000.out  11_1.000000.out  11_1.250000.out  11_1.500000.out  5_0.000000.out  5_0.250000.out  5_0.500000.out  5_0.750000.out  5_1.000000.out  5_1.250000.out  5_1.500000.out  6_0.000000.out  6_0.250000.out  6_0.500000.out  6_0.750000.out  6_1.000000.out  6_1.250000.out  6_1.500000.out  7_0.000000.out  7_0.250000.out  7_0.500000.out  7_0.750000.out  7_1.000000.out  (+16 more)
include/: ExactEnumeration.h  Lattice.h  Model.h  MonteCarlo.h
(+284 files in other folders)
